--- a/ServiceInquiry.html
+++ b/ServiceInquiry.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><img src="./images/image.png" alt=""></a>
+        <a href="#" class="logo"><img src="./images/logo.png" alt=""></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -39,6 +39,7 @@
 
     <section id="home" class="home">
         <h2>Schedule your Repair Now</h2>
+        <div style="text-align:center; margin-top: -12rem; margin-bottom: 2rem;"></div>
     </section>
 
     <section id="career-heading" class="career-heading">
@@ -109,8 +110,7 @@
 
     <!-- Center an iframe inside a div -->
     <div style="text-align:center; margin-top: 2rem; margin-bottom: 2rem;">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSy1xW_3cQAFQTDdKbSUCIRdFLve8Ac7My_jPeVaVMC_hvDQ/viewform?embedded=true" width="640" height="951" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        width="640" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSy1xW_3cQAFQTDdKbSUCIRdFLve8Ac7My_jPeVaVMC_hvDQ/viewform?embedded=true" width="640" height="1095" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 
       <div class="footer">
