--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><img src="/images/image.png" alt=""></a>
+        <a href="#" class="logo"><img src="./images/logo.png" alt=""></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -65,7 +65,7 @@
             </p>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <div class="item"> <span class="icon feature_box_col_one"><img src="./images/sew.svg" /></i--></span>
+            <div class="item"> <span class="icon feature_box_col_one"><img src="./images/vac.svg" /></i--></span>
             <h6>Vacuum Cleaner & Carpet Cleaners</h6>
             <p>We service and repair all major brands of vacuum cleaners.</p>
           </div>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_three"><img src="/images/vac.svg" /></i--></span>                      <!-- <span class="icon feature_box_col_three"><i class="fa fa-magic"></i></span>-->
+          <div class="item"> <span class="icon feature_box_col_three"><img src="./images/coffee.svg" /></i--></span>                      <!-- <span class="icon feature_box_col_three"><i class="fa fa-magic"></i></span>-->
             <h6>Household Appliances & Other Items</h6>
             <p>We service and repair all major brands. Other items includes</p>
           </div>
@@ -93,24 +93,24 @@
     <div class="container">
         <div>
             <i class="far fa-clock fa-4x"></i>
-            <div class="counter" data-target="13500">0</div>
+            <div class="counter" data-target="150">0</div>
             <h3>Working Hours</h3>
         </div>
         <div>
             <i class="fas fa-gift fa-4x"></i>
-            <div class="counter" data-target="720">0</div>
+            <div class="counter" data-target="14">0</div>
             <h3>Completed Projects</h3>
         </div>
         <div>
             <i class="fas fa-users fa-4x"></i>
-            <div class="counter" data-target="480">0</div>
+            <div class="counter" data-target="10">0</div>
             <h3>Happy Clients</h3>
         </div>
-        <div>
+        <!--div>
             <i class="fas fa-award fa-4x"></i>
             <div class="counter" data-target="120">0</div>
             <h3>Awards Received</h3>
-        </div>
+        </div-->
     </div>
 </section>
 
@@ -171,7 +171,7 @@
                 </div>
                 <div class="testimonial-text">
                     <h3>Lois K.</h3>
-                    <h4>Designation</h4>
+                    <h4>Chair Lift Repair</h4>
                     <p>
                         Testimonial
 
@@ -184,7 +184,7 @@
                 </div>
                 <div class="testimonial-text">
                     <h3>Paulette M.</h3>
-                    <h4>Designation</h4>
+                    <h4>Wooden Chair Repair</h4>
                     <p>
                         Testimonial
 
@@ -196,8 +196,8 @@
                     <img src="./images/testimonial-3.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
-                    <h3>Person-3</h3>
-                    <h4>Designation</h4>
+                    <h3>Michele K.</h3>
+                    <h4>Sewing Machine Repaired</h4>
                     <p>
                         Testimonial
 
@@ -244,9 +244,9 @@
     <div class="container">
         <div class="section-header">
             <h2>Completed Repairs</h2>
-            <p>
+            <!--p>
                 We don't just build softwares, we build your business.
-            </p>
+            </p-->
         </div>
         <div class="owl-carousel clients-carousel">
             <img src="./images/repair1.png" alt="Client Logo">
