--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="content">
             <!--<h3>We make creativity work for your brand!</h3>-->
-            <p>Make us your neighborhood destination for reliable and timely</p>
+            <p>Make us your neighborhood destination for reliable and timely repairs!</p>
             <!--<a href="#"><button class="btn">Read More</button></a>-->
         </div>
     </div>
@@ -67,19 +67,19 @@
         <div class="col-lg-4 col-sm-6">
             <div class="item"> <span class="icon feature_box_col_one"><img src="./images/vac.svg" /></i--></span>
             <h6>Vacuum Cleaner & Carpet Cleaners</h6>
-            <p>We service and repair all major brands of vacuum cleaners.</p>
+            <p>We service and repair all major brands of vacuum cleaners, such as Simplicity, Riccar, Miele, Sebo, Oreck, Hoover, and more!.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="item"> <span class="icon feature_box_col_two"><img src="./images/sew.svg" /></i--></span>
             <h6>Sewing Machines</h6>
-            <p>We service and repair older mechanical sewing machines.</p>
+            <p>We repair older mechanical sewing machines.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
           <div class="item"> <span class="icon feature_box_col_three"><img src="./images/coffee.svg" /></i--></span>                      <!-- <span class="icon feature_box_col_three"><i class="fa fa-magic"></i></span>-->
             <h6>Household Appliances & Other Items</h6>
-            <p>We service and repair all major brands. Other items includes</p>
+            <p>We repair other household appliances such as coffee machines, toasters, dehumidifiers, 3D printers, or anything in your house that needs to be repaired we will make it happen.</p>
           </div>
         </div>
       </div>
@@ -173,8 +173,7 @@
                     <h3>Lois K.</h3>
                     <h4>Chair Lift Repair</h4>
                     <p>
-                        Testimonial
-
+                        The cord from the chair to the remote was cut so we put a new connector on the cord that was left.
                     </p>
                 </div>
             </div>
@@ -186,7 +185,7 @@
                     <h3>Paulette M.</h3>
                     <h4>Wooden Chair Repair</h4>
                     <p>
-                        Testimonial
+                        4 wooden table chairs were wobbly so we took them apart and cleaned everything and used wood glue to put everything back together.
 
                     </p>
                 </div>
@@ -199,7 +198,7 @@
                     <h3>Michele K.</h3>
                     <h4>Sewing Machine Repaired</h4>
                     <p>
-                        Testimonial
+                        Bobbin was threaded incorrectly, machine was cleaned and lubricated too
 
                     </p>
                 </div>
@@ -210,9 +209,9 @@
                 </div>
                 <div class="testimonial-text">
                     <h3>Person-4</h3>
-                    <h4>Designation</h4>
+                    <h4>Broken Clock</h4>
                     <p>
-                        Testimonial
+                        Clock hands wouldn't spin, installed a new clock movement motor to make it work like new again
 
                     </p>
                 </div>
