--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <img src="./images/testimonial-3.jpg" alt="Testimonial image">
                 </div>
                 <div class="testimonial-text">
-                    <h3>Michele K.</h3>
+                    <h3>Michelle K.</h3>
                     <h4>Sewing Machine Repaired</h4>
                     <p>
                         Bobbin was threaded incorrectly, machine was cleaned and lubricated too
@@ -209,7 +209,7 @@
                 </div>
                 <div class="testimonial-text">
                     <h3>Person-4</h3>
-                    <h4>Broken Clock</h4>
+                    <h4>Broken Regulator Clock</h4>
                     <p>
                         Clock hands wouldn't spin, installed a new clock movement motor to make it work like new again
 
@@ -222,9 +222,9 @@
                 </div>
                 <div class="testimonial-text">
                     <h3>Person-5</h3>
-                    <h4>Designation</h4>
+                    <h4>Miele Vacuum Overhaul</h4>
                     <p>
-                        Testimonial
+                        The Miele was found at a thrift store and was in need of a full overhaul, after it was taken apart and cleaned it worked like new!
 
                     </p>
                 </div>
@@ -234,8 +234,8 @@
 </div>
 
 <div class="communicate">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <h3>Don't let something thats broken go to waste.</h3>
+    <p>Let us fix it!.</p>
     <a href="#contact"><button class="btn">Contact Now</button></a>
 </div>
 
