--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="content">
             <!--<h3>We make creativity work for your brand!</h3>-->
-            <p>Make us your neighborhood destination for reliable and timely repairs!</p>
+            <p>This business started by doing repairs for friends and family, I want to grow and start fixing vacuums and other small appliances for more people in the community. Make us your neighborhood destination for reliable and timely repairs!</p>
             <!--<a href="#"><button class="btn">Read More</button></a>-->
         </div>
     </div>
@@ -89,7 +89,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-  <section class="counters">
+  <!--section class="counters">
     <div class="container">
         <div>
             <i class="far fa-clock fa-4x"></i>
@@ -106,7 +106,7 @@
             <div class="counter" data-target="10">0</div>
             <h3>Happy Clients</h3>
         </div>
-        <!--div>
+        <div>
             <i class="fas fa-award fa-4x"></i>
             <div class="counter" data-target="120">0</div>
             <h3>Awards Received</h3>
