--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <a href="#contact"><button class="btn">Contact Now</button></a>
 </div>-->
 
-<div class="testimonials mt-100">
+<!--div class="testimonials mt-100">
     <div class="container">
         <div class="section-header" style="text-align: center;">
             <h2 style="margin-top: -15rem;">Testimonials</h2>
@@ -243,9 +243,9 @@
     <div class="container">
         <div class="section-header">
             <h2>Completed Repairs</h2>
-            <!--p>
+            <p>
                 We don't just build softwares, we build your business.
-            </p-->
+            </p>
         </div>
         <div class="owl-carousel clients-carousel">
             <img src="./images/repair1.png" alt="Client Logo">
@@ -258,8 +258,8 @@
             <img src="./images/image.png" alt="Client Logo">
         </div>
     </div>
-</div>
-<a href="#" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
+</div-->
+<!--a href="#" class="back-to-top"><i class="ion-ios-arrow-up"></i></a>
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/jquery/jquery-migrate.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -282,7 +282,7 @@
               <span>Owner</span>
               <div class="icons">
                   <a href="https://www.facebook.com/nathan.kerns.56/" class="fab fa-facebook-f"></a>
-                  <!--<a href="https://twitter.com/login" class="fab fa-twitter"></a>-->
+                  <<a href="https://twitter.com/login" class="fab fa-twitter"></a>>
                   <a href="https://www.instagram.com/nskerns/" class="fab fa-instagram"></a>
                   <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
               </div>
@@ -299,14 +299,14 @@
               <span>Mobile Developer</span>
               <div class="icons">
                   <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-                  <!--<a href="https://twitter.com/login" class="fab fa-twitter"></a>-->
+                  <!--<a href="https://twitter.com/login" class="fab fa-twitter"></a>>
                   <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
-                  <!--<a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>-->
+                  <!--<a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>>
               </div>
           </div>
       </div>
   </div>
-</section>
+</section-->
 
 <section id="contact" class="contact">
     <h1 class="heading">get in touch</h1>
