--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#about">about</a></li>
                 <li><a href="#service">services</a></li>
                 <!--<li><a href="#portfolio">portfolio</a></li>-->
-                <li><a href="#team">team</a></li>
+                <!--li><a href="#team">team</a></li-->
                 <li><a href="ServiceInquiry.html">Service Inquiry</a></li>
                 <li><a href="#contact">contact</a></li>
                 <!--<li><a href="#faq">FAQ</a></li>-->
@@ -388,7 +388,7 @@
                           <li><i class="ion-ios-arrow-forward"></i> <a href="#">Home</a></li>
                           <li><i class="ion-ios-arrow-forward"></i> <a href="#about">About us</a></li>
                           <li><i class="ion-ios-arrow-forward"></i> <a href="#service">Our services</a></li>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#team">Team</a></li>
+                          <!--li><i class="ion-ios-arrow-forward"></i> <a href="#team">Team</a></li-->
                         </ul>
                   </div>
 
@@ -419,14 +419,14 @@
                           <!--<a href="https://twitter.com/login?lang=en"><i class="ion-logo-twitter"></i></a>
                           <a href="https://www.linkedin.com/"><i class="ion-logo-linkedin"></i></a>-->
                           <a href="https://www.instagram.com/"><i class="ion-logo-instagram"></i></a>
-                          <a href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="ion-logo-googleplus"></i></a>
+                          <!--a href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="ion-logo-googleplus"></i></a-->
                       </div>
 
                   </div>
 
                   <div class="col-lg-3 col-md-6 footer-newsletter">
                       <h4>Company Motto</h4>
-                      <p>Fill in later.</p>
+                      <p>We povide fast and quality repairs!</p>
                   </div>
 
               </div>
@@ -436,7 +436,7 @@
       <div class="container">
           <div class="row align-items-center">
               <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                  Copyright &copy; 2024 Silvers Home Appliance Repairs. All Rights Reserved.
+                  Copyright &copy; 2025 Silvers Home Appliance Repairs. All Rights Reserved.
               </div>
           </div>
       </div>
